--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gatsby-transformer-remark": "^1.7.36",
     "gatsby-transformer-sharp": "^1.6.22",
     "normalize-scss": "^7.0.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-scroll-up": "^1.3.3"
   },
   "keywords": [
     "gatsby"
